fix: switch to simpler class (DistanceCalcEuclidean) to avoid MINION_DIED